<resources>
    <string name="app_name">HCIProject</string>
    <string name="prompt_no_network">네트워크 연결 상태 확인 후 다시 실행하세요.</string>
    <string name="prompt_write_nickname">닉네임을 입력하세요.</string>
    <string name="prompt_log_in">로그인</string>
    <string name="prompt_write_post">포스트 작성</string>
    <string name="prompt_search">지역, 행사명을 입력하세요</string>
    <string name="prompt_new_post">새 게시물</string>
    <string name="prompt_post">게시물</string>
    <string name="prompt_next">다음</string>
    <string name="prompt_write">작성</string>
    <string name="prompt_title">제목</string>
    <string name="prompt_content">내용</string>
    <string name="prompt_show_list">목록으로 보기</string>
    <string name="prompt_show_map">지도로 보기</string>
    <string name="prompt_username">닉네임</string>
    <string name="prompt_time">시간</string>
    <string name="prompt_location">위치</string>

    <string name="prompt_zoom_level_1">50km</string>
    <string name="prompt_zoom_level_2">5km</string>
    <string name="prompt_zoom_level_3">1km</string>
    <string name="prompt_no_result">검색 결과가 없습니다.</string>
    <string name="prompt_write_content">내용을 입력하세요…</string>
    <string name="prompt_request_permission_locate">위치 권한이 필요합니다.</string>
    <string name="prompt_request_permission_file">파일 권한이 필요합니다.</string>
    <string name="prompt_write_comment">댓글을 입력하세요…</string>
    <string name="prompt_like_text">명이 좋아합니다.</string>
    <string name="prompt_upload_post">게시글을 작성했습니다!</string>
    <string name="prompt_fail_photoPick">사진을 불러오는데 실패하였습니다. 다시 시도해주세요.</string>
    <string name="prompt_do_photoPick">사진을 선택해 주세요.</string>
    <string name="prompt_fail_upload_photo">사진을 업로드하는데 실패하였습니다. 네트워크를 확인해주세요.</string>
    <string name="prompt_fail_search">검색 결과를 찾지 못했습니다.</string>
</resources>