<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.hciproject.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainFragment">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/prompt_search" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.naver.maps.map.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/showPostListBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView" />

        <com.naver.maps.map.widget.LocationButtonView
            android:id="@+id/locationBtn"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/map"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/showPostListBtn"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/zoomLevel1Btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/primaryColor"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/prompt_zoom_level_1"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/zoomLevel2Btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/primaryColor"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/prompt_zoom_level_2"
                android:textColor="@color/primaryTextColor" />

            <TextView
                android:id="@+id/zoomLevel3Btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/primaryColor"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/prompt_zoom_level_3"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/writePostBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/prompt_write_post"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@id/showPostListBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/showPostListBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/prompt_show_list"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>